[package]
name = "newsletter"
version = "0.1.0"
edition = "2024"

[dependencies]
native-tls = { version = "0.2", features = ["vendored"] }
imap = "2.4"
mailparse = "0.14"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }



